--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,15 @@ button.red button.green {
 .good {
   color: green;
 }
+
+.preset {
+  border-radius: 20px;
+  background-color: #dedede;
+  padding: 1.5em;
+}
+
+.plant-img {
+  width: 100%;
+  max-height: 239px;
+  object-fit: cover;
+}
